<resources>
    <string name="app_name">DissertAppDemo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_acount">Create Acount</string>
    <string name="title_activity_home__screen">Home_Screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second</string>
    <string name="search">Search</string>
    <string name="my_account">My Account</string>
    <string name="rules_and_regulation">Rules And Regulation</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="title_activity_third">Third</string>
    <string name="shopping_cart">shopping Cart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_admin__home__screen">Admin_Home_Screen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="title_activity_cat__prod__screen">Cat_Prod_Screen</string>
    <string name="title_activity_supermarket_map__screen">Map</string>
    <string name="title_activity_get_direction__screen">Map</string>


</resources>
