<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_action_account"
            android:title="@string/my_account" />

        <item
            android:id="@+id/supermarket_map"
            android:icon="@drawable/ic_action_supermarket"
            android:title="Supermarkets" />

        <item
            android:id="@+id/recipes"
            android:icon="@drawable/ic_action_receipts"
            android:title="Recipes" />
        <item
            android:id="@+id/reviews"
            android:icon="@drawable/ic_action_reviews"
            android:title="Reviews" />


    </group>

    <item android:title="Term of use">
        <menu>
            <item
                android:id="@+id/faq"
                android:icon="@drawable/ic_action_rules"
                android:title="@string/faq" />
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_action_contact_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_action_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>


</menu>
